# Image-Transformation

./: .gitignore  CMakeLists.txt
inc/: image.h
src/: image.cpp  main.cpp
